--- a/pos-restaurant-2024/src/locales/th/global.json
+++ b/pos-restaurant-2024/src/locales/th/global.json
@@ -4,5 +4,14 @@
     },
     "mainSection": {
      "title": "รองรับเว็บไซต์หลายภาษาด้วย lib ของ react-i18next: แบบขั้นตอนเรียบง่าย"
+    },
+    "productMenu": {
+        "allGroup": "เมนูทั้งหมด",
+        "breakfast": "อาหารเช้า",
+        "appetizer": "อาหารทานเล่น",
+        "chineseFood": "อาหารจีน",
+        "italianFood": "อาหารอิตาเลียน",
+        "drink": "เครื่องดื่ม",
+        "dessert": "ของหวาน"
     }
    }
