add re-redirect page

--- a/pos-restaurant-2024/src/locales/en/global.json
+++ b/pos-restaurant-2024/src/locales/en/global.json
@@ -3,7 +3,7 @@
      "chooseLanguage": "Choose Language:"
     },
     "mainSection": {
-     "title": "Creating Multilingual React Apps with react-i18next: A Step-by-Step Guide"
+     "title": "Show sample title"
     },
     "productMenu": {
         "allGroup": "All Menu",
