add print checkbill, change background, refund return, change lang

--- a/pos-restaurant-2024/src/locales/en/global.json
+++ b/pos-restaurant-2024/src/locales/en/global.json
@@ -13,5 +13,8 @@
         "italianFood": "Italian Food",
         "drink": "Drink",
         "dessert": "Dessert"
+    },
+    "FloorPlanPage": {
+        "logoutButton": "Logout"
     }
    }
