--- a/pos-restaurant-2024/src/locales/th/global.json
+++ b/pos-restaurant-2024/src/locales/th/global.json
@@ -13,5 +13,8 @@
         "italianFood": "อาหารอิตาเลียน",
         "drink": "เครื่องดื่ม",
         "dessert": "ของหวาน"
+    },
+    "FloorPlanPage": {
+        "logoutButton": "ออก"
     }
    }
