add sync-thermal-service copy

--- a/pos-restaurant-2024/src/locales/th/global.json
+++ b/pos-restaurant-2024/src/locales/th/global.json
@@ -5,6 +5,47 @@
     "mainSection": {
      "title": "รองรับเว็บไซต์หลายภาษาด้วย lib ของ react-i18next: แบบขั้นตอนเรียบง่าย"
     },
+    "mainSalePage": {
+        "buttonFloorPlan": "แสดงโต๊ะอาหารทั้งหมด",
+        "buttonPayment": "ชำระเงิน",
+        "dineInTopic": "รายการอาหารที่สั่ง",
+        "takeAwayTopic": "รายการอาหารที่สั่ง",
+        "deliveryTopic": "รายการอาหารที่สั่ง",
+        "dineInEmptyMenu": "ไม่พบรายการอาหารที่สั่ง Dine In",
+        "takeAwayEmptyMenu": "ไม่พบรายการอาหารที่สั่ง Take Away",
+        "deliveryEmptyMenu": "ไม่พบรายการอาหารที่สั่ง Delivery",
+        "dineInTab": "ทานในร้าน",
+        "takeAwayTab": "รับกลับบ้่าน",
+        "DeliveryTab": "สั่ง Delivery",
+        "buttonSendKitchen": "ส่งครัว/ พักโต๊ะ",
+        "totalAmountLabel": "ยอดรวมอาหาร",
+        "buttonSetMenu": "เลือกเมนูเซ็ท",
+        "buttonAddOrder": "สั่งอาหาร",
+        "buttonManualPrice": "กำหนดราคาเอง",
+        "searchMenuBar": "ค้นหารายการอาหาร",
+        "tabelNo": "โต๊ะ",
+        "priceTag": "ราคา",
+        "productDetail": {
+            "foodSpecialText": "ข้อความพิเศษ",
+            "foodAdditional": "ระบุข้อความเพิ่มเติม",
+            "foodType": "ประเภทอาหาร",
+            "dineIn": "ทานในร้าน",
+            "takeAway": "รับกลับบ้าน",
+            "delivery": "เดลิเวอรี่",
+            "productCode": "รหัสสินค้า",
+            "buttonCancel": "ยกเลิก",
+            "buttonConfirm": "ยืนยัน",
+            "itemSelected": "รายการที่เลือก",
+            "minOrder": "สั่งขั้นต่ำ",
+            "maxOrder": "สั่งได้ไม่เกิน",
+            "canChangeOrder": "สามารถเปลี่ยนเมนูได้",
+            "cannotChangeOrder": "ไม่สามารถเปลี่ยนเมนูได้",
+            "buttonChangeOrder": "เปลี่ยนเมนู",
+            "editFoodName": "แก้ไขราคาสินค้า",
+            "productName": "ชื่อสินค้า",
+            "updateNewPrice": "กำหนดราคาใหม่"
+        }
+    },
     "productMenu": {
         "allGroup": "เมนูทั้งหมด",
         "breakfast": "อาหารเช้า",
