add retail sale pos page

--- a/pos-restaurant/src/locales/en/global.json
+++ b/pos-restaurant/src/locales/en/global.json
@@ -18,7 +18,7 @@
     "logoutButton": "Logout",
     "systemLogin": "System Login",
     "customerCount": "Customer Count",
-    "customerTypeDetail": "Details of customers of each nationality",
+    "customerTypeDetail": "Nationality",
     "thaiPerson": "Thai",
     "europeanPerson": "European",
     "americanPerson": "American",
@@ -35,7 +35,7 @@
     "dineIn": "Dine In",
     "takeAway": "Take Away",
     "delivery": "Delivery",
-    "customerMoreDetail": "More customer detail",
+    "customerMoreDetail": "General",
     "manPerson": "Customer (Man)",
     "womanPerson": "Customer (Woman)",
     "kidPerson": "Customer (Kid)",
