--- a/pos-restaurant/src/locales/th/global.json
+++ b/pos-restaurant/src/locales/th/global.json
@@ -59,7 +59,7 @@
     "logoutButton": "ออก",
     "systemLogin": "เวลาเข้าใช้งาน",
     "customerCount": "จำนวนลูกค้า",
-    "customerTypeDetail": "รายละเอียดลูกค้าแต่ละสัญชาติ",
+    "customerTypeDetail": "สัญชาติ",
     "thaiPerson": "คนไทย",
     "europeanPerson": "คนยุโรป",
     "americanPerson": "คนอเมริกา",
@@ -76,7 +76,7 @@
     "dineIn": "ทานในร้าน",
     "takeAway": "รับกลับบ้าน",
     "delivery": "เดลิเวอรี่",
-    "customerMoreDetail": "รายละเอียดลูกค้าเพิ่มเติม",
+    "customerMoreDetail": "ทั่วไป",
     "manPerson": "ลูกค้าผู้ชาย (ท่าน)",
     "womanPerson": "ลูกค้าผู้หญิง (ท่าน)",
     "kidPerson": "ลูกค้าเด็ก (ท่าน)",
